Utworzono za pomocą Colab

--- a/praca_domowa1_um_uw.ipynb
+++ b/praca_domowa1_um_uw.ipynb
@@ -81,7 +81,7 @@
         "id": "OxlA8Cj3Ywaw"
       },
       "id": "OxlA8Cj3Ywaw",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         }
       },
       "id": "vDS96fYlY_Uh",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -313,7 +313,7 @@
         "id": "rNZ5X9gnbORn"
       },
       "id": "rNZ5X9gnbORn",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +333,7 @@
         }
       },
       "id": "CsKiFGuuovVr",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -637,7 +637,7 @@
         "id": "uhb-ZRZ8blBx"
       },
       "id": "uhb-ZRZ8blBx",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -655,7 +655,7 @@
         }
       },
       "id": "6Cb56npsoIxf",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,7 +971,7 @@
         }
       },
       "id": "AL3ZuxGMdYfe",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1004,7 @@
         }
       },
       "id": "_cmBE77_1vov",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1054,7 +1054,7 @@
         }
       },
       "id": "tK0Q3ts0yBUX",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1071,12 +1071,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# wykres 3D\n",
         "from mpl_toolkits import mplot3d\n",
         "from matplotlib.colors import ListedColormap\n",
         "mycmap = ListedColormap([\"blue\", \"red\"])\n",
         "fig = plt.figure()\n",
         "ax = plt.axes(projection='3d')\n",
-        "ax.scatter3D(df.loc[:, 'x'], df.loc[:, 'y'], df.loc[:, 'z'], c = df.loc[:,\"class\"], marker = 'o', alpha=0.6, cmap='inferno')\n"
+        "ax.scatter3D(df.loc[:, 'x'], df.loc[:, 'y'], df.loc[:, 'z'], c = df.loc[:,\"class\"], marker = 'o', alpha=0.6, cmap='inferno')\n",
+        "plt.title(\"3D scatterplot\")"
       ],
       "metadata": {
         "id": "OYWD1nCdyr0S",
@@ -1087,7 +1089,7 @@
         }
       },
       "id": "OYWD1nCdyr0S",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1151,13 +1153,13 @@
       ],
       "metadata": {
         "id": "thB8GjabEChl",
-        "outputId": "09c79d2d-2fca-4aa0-c7ac-99069214af19",
+        "outputId": "5150420e-7349-47c1-cb3c-8bf205cbdfad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "thB8GjabEChl",
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1170,7 +1172,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 16
         }
       ]
     },
@@ -1183,14 +1185,14 @@
       ],
       "metadata": {
         "id": "_BedlOo0Njgk",
-        "outputId": "67289dee-a3c8-4724-bd96-ef9c0f551a64",
+        "outputId": "383c11e8-b3d3-4da1-cd82-68ed9c04cab9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
       "id": "_BedlOo0Njgk",
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1205,7 +1207,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-33ef5602-3f42-4937-8d0a-5beb90d194a4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1f01a010-f3a6-4f16-a789-232df9ac2fca\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1266,7 +1268,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-33ef5602-3f42-4937-8d0a-5beb90d194a4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1f01a010-f3a6-4f16-a789-232df9ac2fca')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1318,12 +1320,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-33ef5602-3f42-4937-8d0a-5beb90d194a4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1f01a010-f3a6-4f16-a789-232df9ac2fca button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-33ef5602-3f42-4937-8d0a-5beb90d194a4');\n",
+              "        const element = document.querySelector('#df-1f01a010-f3a6-4f16-a789-232df9ac2fca');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1343,8 +1345,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-cc7973e3-a995-455e-8337-f7a0d2e314f5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cc7973e3-a995-455e-8337-f7a0d2e314f5')\"\n",
+              "<div id=\"df-b1186d39-8d0d-41ef-99d1-e284e504cc58\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b1186d39-8d0d-41ef-99d1-e284e504cc58')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1463,7 +1465,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-cc7973e3-a995-455e-8337-f7a0d2e314f5 button');\n",
+              "        document.querySelector('#df-b1186d39-8d0d-41ef-99d1-e284e504cc58 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1480,7 +1482,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 17
         }
       ]
     },
@@ -1491,14 +1493,14 @@
       ],
       "metadata": {
         "id": "nBpNt0THQ5lF",
-        "outputId": "647d4d2b-04bf-4c86-a3fa-74dcca59295c",
+        "outputId": "922458ea-8a54-4d7e-bf1b-83a8b3efc8b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
       "id": "nBpNt0THQ5lF",
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1513,7 +1515,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-88357a02-8e8e-4550-80ea-2efca14aba3f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-467e938a-7ba1-44cf-a28c-ec78230182ce\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1580,7 +1582,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-88357a02-8e8e-4550-80ea-2efca14aba3f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-467e938a-7ba1-44cf-a28c-ec78230182ce')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1632,12 +1634,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-88357a02-8e8e-4550-80ea-2efca14aba3f button.colab-df-convert');\n",
+              "        document.querySelector('#df-467e938a-7ba1-44cf-a28c-ec78230182ce button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-88357a02-8e8e-4550-80ea-2efca14aba3f');\n",
+              "        const element = document.querySelector('#df-467e938a-7ba1-44cf-a28c-ec78230182ce');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1657,8 +1659,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a860a403-7180-4dd0-90c9-91993a2facc7\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a860a403-7180-4dd0-90c9-91993a2facc7')\"\n",
+              "<div id=\"df-5af20321-d20b-477a-93a5-5778f5e29f17\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5af20321-d20b-477a-93a5-5778f5e29f17')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1777,7 +1779,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a860a403-7180-4dd0-90c9-91993a2facc7 button');\n",
+              "        document.querySelector('#df-5af20321-d20b-477a-93a5-5778f5e29f17 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1794,7 +1796,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 18
         }
       ]
     },
@@ -1809,23 +1811,23 @@
     {
       "cell_type": "code",
       "source": [
-        "print(np.var(df.loc[:,'x']),np.var(df.loc[:,'y']),np.var(df.loc[:,'z']))"
+        "print(round(np.var(df.loc[:,'x']), 4),round(np.var(df.loc[:,'y']), 4),round(np.var(df.loc[:,'z']),4))"
       ],
       "metadata": {
         "id": "Gd7A7Ut8RUpv",
-        "outputId": "d321b7f1-cecd-4179-dbdd-5e7615d163fa",
+        "outputId": "df85bedb-18ef-4493-951e-ca9097c829d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "Gd7A7Ut8RUpv",
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5.2740698935884005 2.3312959131119975 39.89153822613139\n"
+            "5.2741 2.3313 39.8915\n"
           ]
         }
       ]
