Utworzono za pomocą Colab

--- a/praca_domowa1_um_uw.ipynb
+++ b/praca_domowa1_um_uw.ipynb
@@ -68,6 +68,16 @@
       "id": "x2GGfUfXpw-m"
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "zadanie 1"
+      ],
+      "metadata": {
+        "id": "QhbGSH5J_edc"
+      },
+      "id": "QhbGSH5J_edc"
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
@@ -1136,7 +1146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "PCA wymaga standaryzacji cech przede wszystkim ze względu na potencjalne różnice w skalach wartości, które przyjmują poszczególne cechy. Szukając składowych głównych maksymalizujemy wariancję próbki zrzutowanej na daną"
+        "PCA wymaga standaryzacji cech przede wszystkim ze względu na potencjalne różnice w skalach wartości, które przyjmują poszczególne cechy. Szukając składowych głównych maksymalizujemy wariancję próbki zrzutowanej na prostą. Przez co brak skalowania i przesunięcia sprawiłby, że niektóre cechy bardziej  "
       ],
       "metadata": {
         "id": "Gx5X2A5ISgMH"
@@ -1159,7 +1169,7 @@
         }
       },
       "id": "thB8GjabEChl",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1192,7 +1202,7 @@
         }
       },
       "id": "_BedlOo0Njgk",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,7 +1510,7 @@
         }
       },
       "id": "nBpNt0THQ5lF",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1821,7 +1831,7 @@
         }
       },
       "id": "Gd7A7Ut8RUpv",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
