Utworzono za pomocą Colab

--- a/praca_domowa2.ipynb
+++ b/praca_domowa2.ipynb
@@ -69,7 +69,7 @@
         "id": "_BnXoMLPzfDQ"
       },
       "id": "_BnXoMLPzfDQ",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "id": "DCEewqaH2YM9"
       },
       "id": "DCEewqaH2YM9",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
         "outputId": "c70d982c-e226-477d-c30d-a58c9736bb84"
       },
       "id": "WsF24v4R1b8H",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +181,7 @@
         }
       },
       "id": "pRItG9UCAHhI",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +227,7 @@
         }
       },
       "id": "KE7VLWYhEsTK",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,6 +254,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Wytrenowany model GMM Poprawnie zidentyfikował klastry w zbiorze \"mouse\". Dzięki porównaniu wykresów z zaznaczonymi kolorami punktami odpowiednio w zależności od przypisanego klastra przez model do wykresu, w którym kolor punktu świadczy o rozkładzie z którego pochodzi zauważamy że klastry są podobne. Jedynie niewiele punktów ze względu na losowość zostało wygenerowanych nie przez najprawdopodobniejszy dla tego punktu rozkład i one zostały przez tą losowość źle przyporządkowane. Ponadto powyższy wykres ukazujący jak poszczególne punktu z pewnego obszaru na płaszczyźnie byłyby sklasyfikowane"
+      ],
+      "metadata": {
+        "id": "Jnu2J5nUEmLx"
+      },
+      "id": "Jnu2J5nUEmLx"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Zadanie 2"
       ],
       "metadata": {
@@ -271,7 +281,7 @@
         "id": "tLBlC-A2NyKA"
       },
       "id": "tLBlC-A2NyKA",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +300,7 @@
         "outputId": "7b5f210e-fb9e-4355-86f1-5b19581ef707"
       },
       "id": "4Eh0sjgDSuMy",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +347,7 @@
         }
       },
       "id": "DMDkxOWbSowz",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -368,7 +378,7 @@
         "outputId": "d1313676-491a-497c-d8c1-ff3c90d2d7f1"
       },
       "id": "iwheDwn4T1Vg",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
