Utworzono za pomocą Colab

--- a/praca_domowa_3.ipynb
+++ b/praca_domowa_3.ipynb
@@ -99,7 +99,7 @@
         "id": "HvZ6ideiPJ2F"
       },
       "id": "HvZ6ideiPJ2F",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "outputId": "81c312be-8ce3-4724-f2bf-70ff566ad401"
       },
       "id": "ri-KTgD2NsIM",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +520,7 @@
         "outputId": "9807de91-e2f5-4956-c0c2-701095e06d72"
       },
       "id": "ahtPgmmSKTyI",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +568,7 @@
         }
       },
       "id": "2uQQsSevW4AY",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
         "outputId": "ca8386f5-9544-4d96-ac70-3f2e9a920eed"
       },
       "id": "9QB31BK1KWvR",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1075,7 +1075,7 @@
         "outputId": "e6c2d3a7-dcd4-4c63-bafa-61b39ebd08c2"
       },
       "id": "dxEUO_sY6D4M",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,11 +1110,25 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Is higher specificity more valuable than higher sensitivity in certain contexts? Or maybe the other way around?\n",
+        "\n",
+        "Tak, na podstawie wcześniejszych obserwacji stwierdzamy że"
+      ],
       "metadata": {
         "id": "tFlmD2OrG9FA"
       },
       "id": "tFlmD2OrG9FA"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Does the best threshold depend on the task? (discuss cases like disease detection vs. spam filtering)"
+      ],
+      "metadata": {
+        "id": "siaZ04M4tJEo"
+      },
+      "id": "siaZ04M4tJEo"
     }
   ],
   "metadata": {
