Utworzono za pomocą Colab

--- a/praca_domowa_3.ipynb
+++ b/praca_domowa_3.ipynb
@@ -1111,9 +1111,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Is higher specificity more valuable than higher sensitivity in certain contexts? Or maybe the other way around?\n",
+        "Is higher specificity more valuable than higher sensitivity in certain contexts? Or maybe the other way around? Does the best threshold depend on the task? (discuss cases like disease detection vs. spam filtering)\n",
         "\n",
-        "Tak, na podstawie wcześniejszych obserwacji stwierdzamy że"
+        "Tak, na podstawie wcześniejszych obserwacji stwierdzamy że wybór miary powinien być adekwatny do postawionego celu. W szczególności powinien zależeć od tego jakiego błędu przy predykcji chcemy się w większym stopniu ustrzec. W przypadku np. wybierania jednostek do badań na daną chorobę chcemy ustrzec się wykluczenia choroby u osoby w rzeczywistości chorej, więc prawdopodobnie skupimy się na maksymalizowaniu czułości, natomiast wykrywając spam nie chcemy ukryć ważnej informacji - posłużymy się miarą swoistości."
       ],
       "metadata": {
         "id": "tFlmD2OrG9FA"
@@ -1123,12 +1123,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Does the best threshold depend on the task? (discuss cases like disease detection vs. spam filtering)"
+        "How does a ROC curve help in this process?\n",
+        "\n",
+        "Krzywa ta pozwala sprawdzić jaki poziom jednej z tych miar możemy otrzymać utrzymując drugą z nich na danym poziomie. W szczególności pozwala dobrać odpowiedni threshold tak żeby model miał najlepszą drugą miarę spośród modeli o tym samym poziomie w wazniejszej z miar."
       ],
       "metadata": {
         "id": "siaZ04M4tJEo"
       },
       "id": "siaZ04M4tJEo"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "How do you select the optimal threshold using the ROC curve?"
+      ],
+      "metadata": {
+        "id": "YzSglCWMxLCl"
+      },
+      "id": "YzSglCWMxLCl"
     }
   ],
   "metadata": {
